Fix some drag&drop, overflow issue

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -4,6 +4,10 @@
   margin-top: .75rem;
   padding: .75rem;
   background: #fff;
+
+  &:last-child {
+    margin-bottom: .75rem;
+  }
 }
 
 .card-header {
